--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,24 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV.fetch("RAILS_DB_USERNAME") %>
+  password: <%= ENV.fetch("RAILS_DB_PASSWORD") %>
+  host: <%= ENV.fetch("RAILS_DB_HOST") %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: uranai_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: uranal_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: uranal_production
